--- a/PositionIn/Views/CommunityCells/PositionIn.CommunityInfoCell.xib
+++ b/PositionIn/Views/CommunityCells/PositionIn.CommunityInfoCell.xib
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -15,7 +16,7 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="38 Members" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aoZ-zC-qxe">
-                        <rect key="frame" x="32" y="5" width="187" height="18"/>
+                        <rect key="frame" x="32" y="5" width="173" height="18"/>
                         <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="15"/>
                         <color key="textColor" red="0.74901960779999999" green="0.74901960779999999" blue="0.74901960779999999" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
@@ -42,7 +43,7 @@
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="38 Members" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XQk-UL-8mz">
-                        <rect key="frame" x="227" y="5" width="85" height="18"/>
+                        <rect key="frame" x="213" y="5" width="99" height="18"/>
                         <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="15"/>
                         <color key="textColor" red="0.74901960784313726" green="0.74901960784313726" blue="0.74901960784313726" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
@@ -57,6 +58,7 @@
                     <constraint firstItem="tat-Wc-Uju" firstAttribute="top" secondItem="aoZ-zC-qxe" secondAttribute="bottom" constant="5" id="6kr-VD-7eP"/>
                     <constraint firstItem="SR6-1U-fb7" firstAttribute="centerY" secondItem="2NY-pq-cAG" secondAttribute="centerY" id="8xR-gw-HwM"/>
                     <constraint firstItem="aoZ-zC-qxe" firstAttribute="centerY" secondItem="2NY-pq-cAG" secondAttribute="centerY" id="EdB-Zo-J3X"/>
+                    <constraint firstItem="XQk-UL-8mz" firstAttribute="leading" secondItem="2NY-pq-cAG" secondAttribute="leadingMargin" constant="205" id="Fcp-hD-qGt"/>
                     <constraint firstItem="aoZ-zC-qxe" firstAttribute="top" secondItem="2NY-pq-cAG" secondAttribute="top" constant="5" id="Jr5-F8-rSo"/>
                     <constraint firstAttribute="trailing" secondItem="tat-Wc-Uju" secondAttribute="trailing" constant="8" id="KC7-Ku-vYl"/>
                     <constraint firstItem="XQk-UL-8mz" firstAttribute="leading" secondItem="aoZ-zC-qxe" secondAttribute="trailing" constant="8" id="M0L-EB-7mE"/>
@@ -85,6 +87,7 @@
                 <outlet property="communityTypeIcon" destination="SR6-1U-fb7" id="LDz-da-cJo"/>
                 <outlet property="communityTypeLabel" destination="aoZ-zC-qxe" id="EX7-ng-dgC"/>
                 <outlet property="countLabel" destination="XQk-UL-8mz" id="0PA-o9-LFQ"/>
+                <outlet property="countLabelLeftMargin" destination="Fcp-hD-qGt" id="kuM-l6-QMi"/>
                 <outlet property="descriptionLabel" destination="tat-Wc-Uju" id="8zr-YB-hqn"/>
             </connections>
             <point key="canvasLocation" x="315" y="332"/>
